--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>AmaruIO Hub</h1>
+    <h1>AmaruIO</h1>
     <p>I will be making changes to this website in the future. Here I will upload video games and other stuff.</p>
 
     <div class="game">
